# ResearchAutomation

./: .gitignore  .mega-linter.yml  LICENSE  README.md  day1.md  day2.md  day3.md  dayx.md  index.html  package-lock.json  package.json  site_index.html  slides.md  uno.config.ts
.github/workflows/: deploy.yml  mega-linter.yml  selenium.yaml
Data/: README.md  data.py  encodings.py
DoIt/: .gitignore  README.md
Email/: README.md  batch_email.py  emaillib.py  scores.csv  single_email.py
Enrollment/: Dockerfile  check_enrollment.py  docker-compose.yml
Images/: README.md  animate.py  compare.py  make_plot.py  mosaic.py
Make/: Makefile
MicrosoftOffice/: .gitignore  README.md  data.csv  make_document.py  make_powerpoint.py  make_spreadsheet.py  requirements.txt  template.pptx
Nextflow/: main.nf
Nobel/: check_nobel.py
Pinning/: README.md  do_plot.R  make_plots.sh
Pinning/v3.5/: deps.R
Pipelines/: README.md
Pipelines/DoIt/: .gitignore  README.md  dodo.py  requirements.txt
Pipelines/Make/: README.md
Pipelines/Nextflow/: README.md
Pipelines/RTargets/: README.md  _targets.R
Pipelines/data/: 2021-02-18-data.csv
Pipelines/scripts/: merge_racer_data.py  plot_data.py
Plotting/: pyproject.toml
VirtualEnvs/: README.md  break_env.sh
Webhooks/: README.md  blinky.py  blinky_server.py  requirements.txt
assets/: md-6dbHjMiZ.js  md-C1ZJFYka.js  md-CL5eoUPq.js  md-DrbI0CWP.js
day_1/: 404.html  _redirects  index.html
layouts/: two-cols-header-fixed.vue
scripts/: clean_racer_data.py  extract_racer_data.py  print_racer_names.py
(+114 files in other folders)
